--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,43 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="es">
+<!-- this template was designed by http://www.tristarwebdesign.co.uk - please visit for more templates & information - thank you. -->
+<head>
+<title>Fans de las Aves Chilenas</title>
+<meta charset="utf-8" />
+<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="theme-color" content="#000000" />
+<meta
+  name="description"
+  content="Web site created using create-react-app"
+/>
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+<!--
+  manifest.json provides metadata used when your web app is installed on a
+  user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+-->
+<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+</head>
+<body>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<div id="border">
+	<div id="container">
+		
+		<div id="menu">
+			<ul>
+				<li><a title="Home" id="home" href="/">Home</a></li><li>|</li>
+				<li><a title="Ingresar" id="login" href="#">Ingresar</a></li><li>|</li>
+				<li><a title="Saludos" id="hello" href="#">Saludos</a></li>
+				<li>|</li>
+				<li><a title="Muro" id="wall" href="#">Muro</a></li><li>|</li>
+				<li><a title="Imagenes" id="images" href="#">Imagenes</a></li><li>|</li>
+				<li><a title="Usuarios" id="users" href="#">Usuarios</a></li><li>|</li>
+				<li><a title="Cuenta" id="account" href="#">Cuenta</a></li><li>|</li>
+				<li><a title="Salir" id="exit" href="#">Salir</a></li>
+			</ul>
+		</div>
+	
+		<div id="header">
+			<p><a title="website name" href="/">Fans de las Aves Chilenas</a></p>
+		</div>
+		
+		<div id="content">
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+      <div id="root"></div>
+    </div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+		<div id="footer">
+			<p><a title="Tristar Website Design" href="http://www.webdesignlondon-tristar.co.uk/" target="_blank">Web Design by Tristar</a>.
+				Developed by <a href="http://cl.linkedin.com/in/crirojas" target="_blank">Cristi&aacute;n Rojas</a>.</p>
+		</div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+	</div>
+</div>
+
+</body>
 </html>
