Some react changes

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -23,28 +23,16 @@
 <div id="border">
 	<div id="container">
 		
-		<div id="menu">
-			<ul>
-				<li><a title="Home" id="home" href="/">Home</a></li><li>|</li>
-				<li><a title="Ingresar" id="login" href="#">Ingresar</a></li><li>|</li>
-				<li><a title="Saludos" id="hello" href="#">Saludos</a></li>
-				<li>|</li>
-				<li><a title="Muro" id="wall" href="#">Muro</a></li><li>|</li>
-				<li><a title="Imagenes" id="images" href="#">Imagenes</a></li><li>|</li>
-				<li><a title="Usuarios" id="users" href="#">Usuarios</a></li><li>|</li>
-				<li><a title="Cuenta" id="account" href="#">Cuenta</a></li><li>|</li>
-				<li><a title="Salir" id="exit" href="#">Salir</a></li>
-			</ul>
-		</div>
+		<div id="menu"><Menu /></div>
 	
 		<div id="header">
 			<p><a title="website name" href="/">Fans de las Aves Chilenas</a></p>
 		</div>
 		
 		<div id="content">
-      <noscript>You need to enable JavaScript to run this app.</noscript>
-      <div id="root"></div>
-    </div>
+			<noscript>You need to enable JavaScript to run this app.</noscript>
+			<div id="root"></div>
+		</div>
 
 		<div id="footer">
 			<p><a title="Tristar Website Design" href="http://www.webdesignlondon-tristar.co.uk/" target="_blank">Web Design by Tristar</a>.
